--- a/index.html
+++ b/index.html
@@ -58,11 +58,23 @@
       <button id="resetBtn">초기화</button>
 
       <div style="margin-top:6px; padding-top:6px; border-top:1px solid #ddd">
+        <input id="inpBleId" placeholder="BLE 센서ID" style="width:110px">
+        <button id="btnSearchBle" title="BLE 센서 ID로 검색">센서 검색</button>
+        <button id="btnToggleSensors">센서 보기</button>
+      </div>
+
+      <div style="margin-top:6px; padding-top:6px; border-top:1px solid #ddd">
         <input id="inpBldg" placeholder="공장ID (예: 123)" style="width:110px">
         <input id="inpColId" placeholder="기둥ID (예: 123)" style="width:110px">
         <input id="inpBay" placeholder="BAY (예: 1-BAY)"  style="width:110px">
         <button id="btnReport" title="강조/신고">강조(신고)</button>
         <button id="btnResolve" title="해결 처리">해결</button>
+      </div>
+
+      <div style="margin-top:6px; padding-top:6px; border-top:1px solid #ddd">
+        <input id="inpSensorId" type="text" placeholder="BLE 센서ID" style="width:110px">
+        <button id="btnSensorReport">강조(신고)</button>
+        <button id="btnSensorResolve" title="해결 처리">해결</button>
       </div>
     </div>
 
